[project]
name = "tibian"
description = "Ticket birthday announcer: A package to announce all creation birthdays of your tickets that live (too) long enough"
authors = [{ name = "Stefan Kraus", email = "dev@stefankraus.org" }]
requires-python = "~=3.9"
readme = "README.rst"
license = "MIT"
dynamic = ["version"]
keywords = [
    "agile",
    "jira",
    "birthdays",
]
dependencies = [
    "jira>=3.1.1,<4",
    "requests>=2.27.1,<3",
    "python-dateutil>=2.8.2,<3",
    "PyYAML~=6.0",
]

[project.urls]
Homepage = "https://github.com/Alicipy/tibian"
Repository = "https://github.com/Alicipy/tibian"

[project.scripts]
tibian = "tibian.main:main"

[dependency-groups]
dev = [
    "uv>=0.7.1,<0.8",
    "pre-commit>=3.6.2,<4",
    "pytest>=7.1.1,<8",
    "pytest-cov>=3.0.0,<4",
    "pytest-mock>=3.7.0,<4",
    "freezegun>=1.2.1,<2",
    "requests-mock>=1.9.3,<2",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.8.1,<0.9.0"]
build-backend = "hatchling.build"
