[project]
name = "tibian"
description = "Ticket birthday announcer: A package to announce all creation birthdays of your tickets that live (too) long enough"
authors = [{ name = "Stefan Kraus", email = "dev@stefankraus.org" }]
requires-python = "~=3.9"
readme = "README.rst"
license = "MIT"
dynamic = ["version"]
keywords = [
    "agile",
    "jira",
    "birthdays",
]
dependencies = [
    "requests>=2.32.3,<3",
    "python-dateutil>=2.9.0.post0,<3",
    "PyYAML>=6.0.2,<7",
    "pydantic>=2.11.4,<3",
]

[project.urls]
Homepage = "https://github.com/Alicipy/tibian"
Repository = "https://github.com/Alicipy/tibian"

[project.scripts]
tibian = "tibian.main:main"

[dependency-groups]
dev = [
    "uv>=0.7.2,<0.8",
    "pre-commit>=4.2.0,<5",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.0,<4",
    "freezegun>=1.5.1,<2",
    "requests-mock>=1.12.1,<2",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 100
[tool.ruff.lint]
extend-select = ['E', 'I', 'UP']

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.8.1,<0.9.0"]
build-backend = "hatchling.build"
